package org.graph.infrastructure.network.message.auction;

public enum AuctionOpType {
    CREATE,
    BID
}
